2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi: Give overview of invocation.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (main): If slash in first non-option argument,
	interpret as if it had been passed with --file.
	* info/session.c (info_select_reference): Null check for label
	field of REFERENCE.
	* info/t/relative-path.sh: New test.

2014-05-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (filesys_error_string): Correct comment about
	whether return value should be freed by caller or not.

	* info/info-utils.c (scan_reference_label): Remove superseded
	correction to 'end' field of REFERENCE.

	* info/nodes.h: Avoid double WINDOW typedef.  Reported by
	Benno Schulenberg 06 May 2014.

2014-05-07  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_INIT): go to 5.2dev, to reduce confusion
	with released versions.

	* doc/info-stnd.texi (@copying): Front-Cover Texts with a capital T.
	Implicitly reported by Benno, 06 May 2014 22:04:00.

	* doc/info.texi (Miscellaneous Commands): H is for get-help-window
	(the terse command list) and h is for get-info-help-node (the
	tutorial), as with Emacs Info.  Except in vi mode, where h
	is also for get-help-window; is that what vi-ers want?
	* info/session.c (display_startup_message): mention
	get-info-help-node as well as get-help-window.
	* info/infomap.c (default_emacs_like_info_keys): switch h/H
	accordingly, as discussed and reported again by Benno,
	06 May 2014 22:04:00.

2014-05-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): Don't free return value of
	info_indices_of_file_buffer.

	* info/pseudotty.c: #define _GNU_SOURCE instead.  Note
	added on the portability of various functions.

	* info/t/Init-intera.inc: Note added on problem with crashes
	during tests.

2014-05-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (begin_multiple_window_info_session): Take