@@ -16,4 +16,4 @@
 
 . t/Init-test.inc
 
-$GINFO --output - --file $infodir/sample.info
+$GINFO --output - --file sample.info
