@@ -19,11 +19,11 @@
 
 # Follow an index entry
 
-$GINFO -f intera --restore t/index.drib
+$GINFO -f intera --restore $t/index.drib
 
 test -f $GINFO_OUTPUT || exit 1
 # Return non-zero (test failure) if files differ
-diff $GINFO_OUTPUT t/node-target
+diff $GINFO_OUTPUT $t/node-target
 RETVAL=$?
 
 . t/Cleanup.inc
